# molnify-app-builder-skill

./: NOTICE  README.md  SECURITY.md  SHA256SUMS  SKILL.md  advanced-topics.md  converting-excel.md  creating-from-scratch.md  custom-frontend.md  database.md  design.md  local-instructions.md  molnify_app_builder-1.0.10-py3-none-any.whl  molnify_app_builder-1.0.13-py3-none-any.whl  molnify_app_builder-1.0.14-py3-none-any.whl  molnify_app_builder-1.0.2-py3-none-any.whl  molnify_app_builder-1.0.4-py3-none-any.whl  molnify_app_builder-1.0.6-py3-none-any.whl  molnify_app_builder-1.0.7-py3-none-any.whl  molnify_builder.py  molnify_inspect_excel.py  molnify_validate.py  patterns.md  pyproject.toml  python.md  report-templates.md  requirements.txt  setup.sh  styling-examples.md  styling.md  validate.py
examples/: expense-tracker.md  financial-model.md  sales-dashboard.md
